Add phoneNumber ans subscribedToNewsletter to /register
