# doc/swagger.yml
@@ -1583,6 +1583,12 @@ definitions:
             channel:
                 type: "string"
                 example: "WEB_GB"
+            subscribedToNewsletter:
+                type: "boolean"
+                example: true
+            phoneNumber:
+                type: "string"
+                example: "+1 234 56789"
     LoginRequest:
         type: "object"
         properties:
